@@ -25,6 +25,7 @@ ENHANCEMENTS:
 + add Status Code Definitions for Print Management Service Class
 + class org.dcm4che.imageio.plugin.DcmImageReader: support of P-value to
   Device-Driver-Level transformation by DcmReadImageParam#setPValToDDL
++ class org.dcm4che.data.DcmObject: add methodes getTag/getTags
 
 CHANGES:
 + change schema of Implementation Version Name in META-INF/MANIFEST.MF and
